--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,6 +1,6 @@
 {
   "name": "kael-id",
-  "app_id": "",
+  "app_id": "6a0e82d6",
   "type": "ionic-angular",
   "integrations": {
     "cordova": {}
